# rosetta

./: Cargo.toml  README.md
src/: detect.rs  main.rs  output.rs
src/detectors/: base64.rs  cidr.rs  color.rs  cron.rs  datetime.rs  docker_image.rs  duration.rs  hash.rs  hex.rs  http_status.rs  ip.rs  jwt.rs  mod.rs  permissions.rs  semver.rs  unix_timestamp.rs  url.rs  url_encoded.rs  uuid.rs
