[package]
name = "rosetta"
version = "0.1.0"
edition = "2021"
description = "A universal data decoder for the command line"
license = "MIT"
repository = "https://github.com/JoaquinCampo/rosetta"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
